# Group-24-Bayesian-Optimization

./: BO.ipynb  README.md  best_hyperparameters.json  coordinates.csv  final_results.json  game_results.jsonl  load_human_data - Copy.py  pyproject.toml
BayesianOptimization/: BO.ipynb  BO_final.ipynb  BO_full.ipynb  BO_full.py  BO_functions.py  BO_wandb.py
data-loading/: dataloader.py  load_coordinates..py  load_coordinates.py  load_human_data.py
data_analysis/: Compare_sketch.py  comparison.ipynb  comparison.py  comparison_final.ipynb  comparison_nb.ipynb  coordinates.npy  plots.ipynb
data_loading/: load_coordinates.py  load_human_data - Copy.py
game_results/: game_results_humans.npz
