[project]
name = "group-24-bayesian-optimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bayesian-optimization>=3.2.0",
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "ipynb>=0.5.1",
    "matplotlib>=3.10.8",
    "numba>=0.64.0",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "scikit-optimize>=0.10.2",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "wandb>=0.25.0",
]
